--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "./common/fonts/fonts.css";
+@import "./common/styles/variables.css";
 
 body {
   margin: 0;
@@ -7,6 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* box-sizing helps us in kleeping margins and padding as we want */
   box-sizing: border-box; 
+  background-color: var(--bg-black);
+  color: var(--white);
 }
 
 code {
