--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "./common/fonts/fonts.css";
 @import "./common/styles/variables.css";
+@import "./common/styles/commonClasses.css";
 
 body {
   margin: 0;
